// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component: CustomCheckbox renders checked 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="custom-checkbox"
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
  >
    <Image
      source={
        Object {
          "testUri": "../../../src/assets/images/checkbox.png",
        }
      }
      style={
        Array [
          Object {
            "height": 24,
            "resizeMode": "contain",
            "width": 24,
          },
          undefined,
          Object {
            "tintColor": "#1EC490",
          },
        ]
      }
    />
    <Image
      animatedStyle={
        Object {
          "value": Object {
            "opacity": 1,
            "transform": Array [
              Object {
                "scale": 1,
              },
            ],
          },
        }
      }
      collapsable={false}
      source={
        Object {
          "testUri": "../../../src/assets/images/checkboxChecked.png",
        }
      }
      style={
        Object {
          "bottom": 0,
          "height": 24,
          "left": 0,
          "opacity": 1,
          "position": "absolute",
          "resizeMode": "contain",
          "right": 0,
          "top": 0,
          "transform": Array [
            Object {
              "scale": 1,
            },
          ],
          "width": 24,
        }
      }
    />
  </View>
  ,
</View>
`;

exports[`component: CustomCheckbox renders error 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="custom-checkbox"
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
  >
    <Image
      source={
        Object {
          "testUri": "../../../src/assets/images/checkbox.png",
        }
      }
      style={
        Array [
          Object {
            "height": 24,
            "resizeMode": "contain",
            "width": 24,
          },
          Object {
            "tintColor": "#25282D",
          },
          Object {
            "tintColor": "#1EC490",
          },
        ]
      }
    />
    <Image
      animatedStyle={
        Object {
          "value": Object {
            "opacity": 1,
            "transform": Array [
              Object {
                "scale": 1,
              },
            ],
          },
        }
      }
      collapsable={false}
      source={
        Object {
          "testUri": "../../../src/assets/images/checkboxChecked.png",
        }
      }
      style={
        Object {
          "bottom": 0,
          "height": 24,
          "left": 0,
          "opacity": 1,
          "position": "absolute",
          "resizeMode": "contain",
          "right": 0,
          "top": 0,
          "transform": Array [
            Object {
              "scale": 1,
            },
          ],
          "width": 24,
        }
      }
    />
  </View>
  ,
</View>
`;

exports[`component: CustomCheckbox renders unchecked 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="custom-checkbox"
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
  >
    <Image
      source={
        Object {
          "testUri": "../../../src/assets/images/checkbox.png",
        }
      }
      style={
        Array [
          Object {
            "height": 24,
            "resizeMode": "contain",
            "width": 24,
          },
          undefined,
          undefined,
        ]
      }
    />
    <Image
      animatedStyle={
        Object {
          "value": Object {
            "opacity": 0,
            "transform": Array [
              Object {
                "scale": 0.7,
              },
            ],
          },
        }
      }
      collapsable={false}
      source={
        Object {
          "testUri": "../../../src/assets/images/checkboxChecked.png",
        }
      }
      style={
        Object {
          "bottom": 0,
          "height": 24,
          "left": 0,
          "opacity": 0,
          "position": "absolute",
          "resizeMode": "contain",
          "right": 0,
          "top": 0,
          "transform": Array [
            Object {
              "scale": 0.7,
            },
          ],
          "width": 24,
        }
      }
    />
  </View>
  ,
</View>
`;
